--- a/templetes/base.html
+++ b/templetes/base.html
@@ -17,6 +17,31 @@
     {% include 'snippets/header.html' %}
     {% endblock %}
   </header>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="margin-bottom: 1rem;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'list' %}">STELLA</a>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    {% if request.user.is_authenticated %}
+                    <span class="navbar-text">
+                        ようこそ {{ user.get_username }} さん
+                    </span>
+                    <li class="nav-item">
+                        <form action="{% url 'logout' %}" method="post">
+                            {% csrf_token %}
+                            <input class="nav-link" type="submit" value="ログアウト">
+                        </form>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">ログイン</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
  
   <main>
     {% block main %}
