--- a/templetes/snippets/footer.html
+++ b/templetes/snippets/footer.html
@@ -1,7 +1,7 @@
 <div class="container w-100 bg-dark text-white py-4" style="max-width: 100%;">
   <div class="row mt-5 mx-5">
     <div class="col-12 col-md">
-      <h5>manual_dic</h5>
+      <h5>stella</h5>
       <small class="d-block mb-3 text-muted">&copy; 2025-</small>
     </div>
     <div class="col-6 col-md">
