--- a/templetes/base.html
+++ b/templetes/base.html
@@ -5,14 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <title>STELLA</title>
-  <!-- Bootstrap 4.5.0 -->
+  <!-- Bootstrap 4.5.0 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  -->
 </head>
  
 <body>
-  <header>
+
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    -->
+  
+    <header>
     {% block header %}
     {% include 'snippets/header.html' %}
     {% endblock %}
@@ -53,6 +63,8 @@
     {% include 'snippets/footer.html' %}
     {% endblock %}
   </footer>
+
+<script src="js/bootstrap.min.js"></script>
  
 </body>
  
