トップからヘッダーで投稿のみ遷移可

--- a/templetes/snippets/top.html
+++ b/templetes/snippets/top.html
@@ -2,6 +2,6 @@
 {% load bootstrap %}
 
 {% block title %}ログイン{% endblock %}
-{% block content %}
+{% block main %}
 <h1>STELLAを使用するにはログインして下さい</h1>
 {% endblock %}
