--- a/templetes/base.html
+++ b/templetes/base.html
@@ -33,7 +33,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="margin-bottom: 1rem;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'list' %}">STELLA</a>
+            <a class="navbar-brand" href="{% url 'article_list' %}">STELLA</a>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     {% if request.user.is_authenticated %}
