--- a/templetes/snippets/article_detail.html
+++ b/templetes/snippets/article_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}詳細{% endblock %}
-{% block content %}
+{% block main %}
 <h1>詳細</h1>
 <table class="table table-striped table-hover table-bordered">
     <thead>
