--- a/templetes/snippets/article_form.html
+++ b/templetes/snippets/article_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}新規作成{% endblock %}
-{% block content %}
+{% block main %}
 <h1>新規作成</h1>
 
 <form method="post" enctype="multipart/form-data">
