--- a/templetes/snippets/article_list.html
+++ b/templetes/snippets/article_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}投稿一覧{% endblock %}
-{% block content %}
+{% block main %}
 <h1>投稿一覧</h1>
 <a href="{% url 'new' %}">新規作成</a>
 
