--- a/templetes/snippets/bookmark_list.html
+++ b/templetes/snippets/bookmark_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}お気に入り一覧{% endblock %}
-{% block content %}
+{% block main %}
 <h1>お気に入り一覧</h1>
 
 <!--検索機能-->
