--- a/templetes/snippets/header.html
+++ b/templetes/snippets/header.html
@@ -1,9 +1,7 @@
 <div class="py-1 bg-dark ">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
-    <a class="py-2 text-white" href="/">stella</a>
-    <a class="py-2 d-none d-md-inline-block text-white" href="/list/">投稿</a> <!--飛ばない。viewsならurls.pyで設定できるのに-->
-    <a class="py-2 d-none d-md-inline-block text-white" href="/profile/">プロフィール</a>
-    <a class="py-2 d-none d-md-inline-block text-white" href="/account/">アカウント</a>
-    <a class="py-2 d-none d-md-inline-block text-white" href="/bookmark/">お気に入り</a>
+    <a class="py-2 d-none d-md-inline-block text-white" href="{% url 'article_list' %}">投稿</a> <!--飛ばない。viewsならurls.pyで設定できるのに-->
+    <a class="py-2 d-none d-md-inline-block text-white" href="{% url 'account' %}">アカウント</a>
+    <a class="py-2 d-none d-md-inline-block text-white" href="{% url 'bookmark_list' %}">お気に入り</a>
   </nav>
 </div>
